--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
+    "cors": "^2.8.5",
     "json-server": "^0.17.0",
     "media": "^0.2.1",
     "media-query-react": "^1.0.4",
@@ -43,5 +44,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://10.80.162.218:8080"
+  "proxy": "http://10.80.162.117:8080/"
 }
